[gd_scene load_steps=28 format=3 uid="uid://b16oqxjwwn8o"]

[ext_resource type="Script" uid="uid://uyml78vfo4qg" path="res://scripts/planet_surface.gd" id="1"]
[ext_resource type="Script" uid="uid://bg56vuqy6ihdv" path="res://scripts/isometric_camera.gd" id="2"]
[ext_resource type="Shader" uid="uid://cjwf7anybhl0t" path="res://shaders/water_ocean.gdshader" id="3_1h2pp"]
[ext_resource type="Script" uid="uid://bwh4kiyteyo0y" path="res://scripts/tile_grid_var2.gd" id="3_5i7v8"]
[ext_resource type="Script" uid="uid://ettjpehl4bl" path="res://scripts/building_manager.gd" id="4"]
[ext_resource type="Texture2D" uid="uid://bkgucvw7h8ojy" path="res://tex/terrain_tileset_v5.png" id="4_5i7v8"]
[ext_resource type="Texture2D" uid="uid://cy5keo0adhehk" path="res://tex/Caustic.png" id="4_i8g4x"]
[ext_resource type="Script" uid="uid://smrqwv25bkk8" path="res://scripts/clean_modern_ui.gd" id="5"]
[ext_resource type="Texture2D" uid="uid://c6djw7ysw81dh" path="res://tex/Water_N_A.png" id="5_i8g4x"]
[ext_resource type="Script" uid="uid://bryxgcbgep5fn" path="res://scripts/debug_overlay.gd" id="6"]
[ext_resource type="Script" uid="uid://dnbjqnnwc1h04" path="res://scripts/hover_detector.gd" id="7"]
[ext_resource type="Script" uid="uid://dabr368pwg3pq" path="res://scripts/building_tooltip.gd" id="8"]
[ext_resource type="Script" uid="uid://c7uhttbrjwq57" path="res://scripts/upkeep_manager.gd" id="9"]
[ext_resource type="Script" uid="uid://ckb50g4i3ardu" path="res://scripts/resource_tracker.gd" id="10"]
[ext_resource type="Script" uid="uid://b74tov6tey0pm" path="res://scripts/building_control.gd" id="11"]
[ext_resource type="Script" uid="uid://4cbukudxqbix" path="res://scripts/grid_overlay.gd" id="13_5i7v8"]
[ext_resource type="Script" uid="uid://c7owmmbaqp0l4" path="res://scripts/grid_water.gd" id="14_mvtr6"]

[sub_resource type="Gradient" id="Gradient_2nt28"]
offsets = PackedFloat32Array(0.39327484, 1)

[sub_resource type="FastNoiseLite" id="FastNoiseLite_e6lge"]
noise_type = 3
seed = 208
frequency = 0.0762
domain_warp_enabled = true

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_uo1bx"]
noise = SubResource("FastNoiseLite_e6lge")
color_ramp = SubResource("Gradient_2nt28")
seamless = true
invert = true
normalize = false

[sub_resource type="FastNoiseLite" id="FastNoiseLite_i8g4x"]

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_2nt28"]
noise = SubResource("FastNoiseLite_i8g4x")
seamless = true
as_normal_map = true

[sub_resource type="ShaderMaterial" id="ShaderMaterial_e6lge"]
render_priority = 0
shader = ExtResource("3_1h2pp")
shader_parameter/sync_time = 3.245
shader_parameter/wave_speed = 0.05
shader_parameter/caustic_speed = 0.01
shader_parameter/edge_fade_power = 2.0
shader_parameter/transmittence = 0.04
shader_parameter/h_dist_trans_weight = 3.0
shader_parameter/transmit_color = Color(0, 0.6509804, 0.78431374, 1)
shader_parameter/depth_fade = 0.3
shader_parameter/depth_fade_distance = 5.0
shader_parameter/surface_albedo = Color(0, 0, 0, 1)
shader_parameter/surface_bottom = Color(0, 0, 0, 1)
shader_parameter/opacity = 0.70999998413008
shader_parameter/opacity_floor = 1.08
shader_parameter/opacity_ceiling = 0.77
shader_parameter/roughness = 0.4
shader_parameter/height_scale = 0.22
shader_parameter/amplitude1 = 2.0
shader_parameter/amplitude2 = 0.5
shader_parameter/vertex_noise_big = ExtResource("4_i8g4x")
shader_parameter/vertex_noise_big2 = ExtResource("4_i8g4x")
shader_parameter/v_noise_tile = 16
shader_parameter/normal_noise = ExtResource("5_i8g4x")
shader_parameter/normal_noise2 = SubResource("NoiseTexture2D_2nt28")
shader_parameter/normal_noise_size = 1.0
shader_parameter/normal_noise_speed = 0.05
shader_parameter/v_normal_scale = 0.05
shader_parameter/normal_map_w = 64
shader_parameter/wobble_power = 0.01
shader_parameter/sky_color = Color(0, 0, 0, 1)
shader_parameter/foam_color = Color(0.78035766, 0.9233874, 0.9748171, 1)
shader_parameter/foam = ExtResource("4_i8g4x")
shader_parameter/foam_mask = SubResource("NoiseTexture2D_uo1bx")
shader_parameter/foam_mask_size = 820.425
shader_parameter/foam_mask_offset = Vector2(7.325, 0)
shader_parameter/foam_wobble = 0.1
shader_parameter/foam_wobble_noise = ExtResource("4_i8g4x")
shader_parameter/foam_wobble_size = 0.17
shader_parameter/high_color = Color(0, 0, 0, 1)
shader_parameter/low_color = Color(0, 0, 0, 1)
shader_parameter/wave_color_range = 2.0
shader_parameter/enable_fake_lighting = true
shader_parameter/shine_strength = 0.2270000107825
shader_parameter/shine_shininess = 6.2850002985375
shader_parameter/shadow = 1.0
shader_parameter/shadow_width = 0.1830000086925
shader_parameter/shadow_color = Color(0.705, 0.705, 0.705, 0.705)
shader_parameter/_specular_smoothness = 0.5
shader_parameter/_specular_strength = 0.2650000125875
shader_parameter/_glossiness = 0.2250000106875

[sub_resource type="QuadMesh" id="QuadMesh_uo1bx"]
material = SubResource("ShaderMaterial_e6lge")
size = Vector2(512, 512)
subdivide_width = 100
subdivide_depth = 100

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_1"]
sky_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)
ground_horizon_color = Color(0.64625, 0.65575, 0.67075, 1)

[sub_resource type="Sky" id="Sky_1"]
sky_material = SubResource("ProceduralSkyMaterial_1")

[sub_resource type="Environment" id="Environment_1"]
sky = SubResource("Sky_1")
ambient_light_source = 3

[node name="PlanetSurface" type="Node3D"]
script = ExtResource("1")

[node name="IsometricCamera" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 30, 30)
fov = 50.0
size = 42.0
script = ExtResource("2")

[node name="Ocean" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.371139e-08, 1, 0, -1, -4.371139e-08, 0, 0.593, 0)
visible = false
mesh = SubResource("QuadMesh_uo1bx")

[node name="TileGrid" type="Node3D" parent="."]
script = ExtResource("3_5i7v8")
terrain_atlas = ExtResource("4_5i7v8")

[node name="BuildingManager" type="Node3D" parent="."]
script = ExtResource("4")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(0.866025, -0.433013, 0.25, 0, 0.5, 0.866025, -0.5, -0.75, 0.433013, 0, 20, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="HoverDetector" type="Node" parent="."]
script = ExtResource("7")

[node name="UpkeepManager" type="Node" parent="."]
script = ExtResource("9")

[node name="ResourceTracker" type="Node" parent="."]
script = ExtResource("10")

[node name="BuildingControl" type="Node" parent="."]
script = ExtResource("11")

[node name="UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("5")

[node name="DebugOverlay" type="CanvasLayer" parent="."]
layer = 2
script = ExtResource("6")

[node name="Panel" type="PanelContainer" parent="DebugOverlay"]
offset_left = 1050.0
offset_top = 10.0
offset_right = 1270.0
offset_bottom = 200.0

[node name="MarginContainer" type="MarginContainer" parent="DebugOverlay/Panel"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBoxContainer" type="VBoxContainer" parent="DebugOverlay/Panel/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="DebugOverlay/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "=== DEBUG INFO ==="

[node name="TimeLabel" type="Label" parent="DebugOverlay/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Time: 00:00"

[node name="FPSLabel" type="Label" parent="DebugOverlay/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "FPS: 60"

[node name="CameraLabel" type="Label" parent="DebugOverlay/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Cam: (0, 0, 0)"

[node name="HSeparator" type="HSeparator" parent="DebugOverlay/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="TileLabel" type="Label" parent="DebugOverlay/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Tile: [0, 0]"

[node name="TypeLabel" type="Label" parent="DebugOverlay/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Type: ground"

[node name="ResourceLabel" type="Label" parent="DebugOverlay/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Resource: None"

[node name="BuildingLabel" type="Label" parent="DebugOverlay/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Building: None"

[node name="OccupiedLabel" type="Label" parent="DebugOverlay/Panel/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Occupied: No"

[node name="TooltipLayer" type="CanvasLayer" parent="."]
layer = 3

[node name="BuildingTooltip" type="PanelContainer" parent="TooltipLayer"]
offset_right = 300.0
offset_bottom = 200.0
script = ExtResource("8")

[node name="MarginContainer" type="MarginContainer" parent="TooltipLayer/BuildingTooltip"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="VBox" type="VBoxContainer" parent="TooltipLayer/BuildingTooltip/MarginContainer"]
layout_mode = 2

[node name="Title" type="Label" parent="TooltipLayer/BuildingTooltip/MarginContainer/VBox"]
layout_mode = 2
text = "BUILDING NAME"
horizontal_alignment = 1

[node name="HSeparator" type="HSeparator" parent="TooltipLayer/BuildingTooltip/MarginContainer/VBox"]
layout_mode = 2

[node name="Status" type="Label" parent="TooltipLayer/BuildingTooltip/MarginContainer/VBox"]
layout_mode = 2
text = "Status: Active"

[node name="Consumes" type="Label" parent="TooltipLayer/BuildingTooltip/MarginContainer/VBox"]
layout_mode = 2
text = "Consumes:
- Resource: Amount"

[node name="Produces" type="Label" parent="TooltipLayer/BuildingTooltip/MarginContainer/VBox"]
layout_mode = 2
text = "Produces:
+ Resource: Amount"

[node name="Upkeep" type="Label" parent="TooltipLayer/BuildingTooltip/MarginContainer/VBox"]
layout_mode = 2
text = "Upkeep:
- Energy: 1/min"

[node name="MeshInstance3D" type="MeshInstance3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.7071068, 0.7071068, 0, -0.7071068, 0.7071068, 0, 30, 30)
visible = false
skeleton = NodePath("../IsometricCamera")
script = ExtResource("13_5i7v8")
line_color = Color(0, 0, 0, 0.8039216)

[node name="Node3D" type="Node3D" parent="."]
visible = false
script = ExtResource("14_mvtr6")
water_texture = ExtResource("4_5i7v8")
